syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";

message EventUserCreate {
    string userId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string Name = 2 [json_name = "name"];
    string Email = 3 [json_name = "email"];
    string Phone = 4 [json_name = "phone"];
}


message EventUserUpdate {
    string userId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string Name = 2 [json_name = "name"];
    string Email = 3 [json_name = "email"];
    string Phone = 4 [json_name = "phone"];
}

message EventUserDeactivate {
    string userId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string Name = 2 [json_name = "name"];
    string Email = 3 [json_name = "email"];
    string Phone = 4 [json_name = "phone"];
}

message EventUserDelete {
    string userId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string Name = 2 [json_name = "name"];
    string Email = 3 [json_name = "email"];
    string Phone = 4 [json_name = "phone"];
}